--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "johnny-five": "^1.0.0",
+    "pi-camera-connect": "^0.2.0",
     "raspi-io": "^9.0.0"
   }
 }
