--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "form-data": "^2.3.2",
     "johnny-five": "^1.0.0",
+    "node-fetch": "^2.2.0",
     "pi-camera-connect": "^0.2.0",
     "raspi-io": "^9.0.0"
   }
