--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^2.2.0",
     "onoff": "^3.2.1",
     "pi-camera-connect": "^0.2.0",
+    "play-sound": "^1.1.2",
     "raspi-io": "^9.0.0"
   }
 }
